# EmailSender

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/broker/: __init__.py  client.py  email_recipient.py
app/configs/: __init__.py  log_settings.py  settings.py
app/sender/: __init__.py  emails.py
app/services/: __init__.py  emails.py  models.py
tests/: test_emails.py
